docs: fix url type issue
